--- a/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,4 +1,4 @@
-name=CODE_RADE portlet
+name=CODE-RADE portlet
 module-group-id=liferay
 module-incremental-version=1
 tags=
@@ -7,4 +7,3 @@ change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
-liferay-versions=6.1.1
